Fix popup overlapping bug

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   flex-direction: column;
   position: fixed;
   left: -120%;
-  top: 0;
+  top: 50px;
   padding: 1rem;
   width: 100%;
   height: 100%;
@@ -318,6 +318,7 @@ body {
   width: fit-content;
   height: auto;
   text-decoration-line: none;
+  transition: 0.3s;
 }
 
 .recent-works-button:hover {
@@ -738,7 +739,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 50%;
+    width: 45%;
   }
 
   .nav-button a {
@@ -844,8 +845,8 @@ body {
   }
 
   .popup-img {
-    width: 100%;
-    height: auto;
+    height: 60vh;
+    object-fit: contain;
     grid-row: 1/3;
   }
 
@@ -874,7 +875,6 @@ body {
   }
   
   .card-works:hover {
-    transform: scale(1.10);
     background-color: rgb(0, 0, 0, 0.2);
     background-blend-mode: multiply;}
 
@@ -923,10 +923,6 @@ body {
     max-width: none;
     align-items: flex-start;
   }
-  
-  .recent-works:hover {
-    transform: scale(1.10);
-  }
 
   .recent-works-supporting-text {
     color: #091e42;
@@ -953,7 +949,6 @@ body {
     margin: 0;
     align-self: center;
   }
-
   .container-3 {
     width: 100%;
     height: auto;
@@ -987,8 +982,8 @@ body {
   .submit-btn {
     letter-spacing: 0.03em;
     background: #f55800;
-    padding: 6px 7px;
-    font-size: 12px;
+    padding: 0.8rem;
+    font-size: 1rem;
     line-height: 17px;
     width: fit-content;
     height: auto;
